# rust-rest-backend-app-template

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: config.rs  exceptions.rs  main.rs  router.rs
src/controllers/: users.rs
src/db/: connection.rs
src/db/models/: user.rs
src/routes/: users.rs
src/services/: users.rs
