[package]
name = "rust-backend-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
actix-web = "4"
dotenv = "0.15.0"
envy = "0.4"
mongodb = "2"
serde = { version = "1.0", features = ["derive"] }
